--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "@iconify/icons-ion": "^1.2.10",
     "@iconify/react": "^5.2.0",
-    "@iconify/tools": "^4.1.1",
+    "@iconify/tools": "^4.1.3",
     "@radix-ui/react-accordion": "^1.2.3",
     "@types/bcrypt": "^5.0.2",
     "@types/nodemailer": "^6.4.17",
@@ -20,7 +20,7 @@
     "clsx": "^2.1.1",
     "lucide-react": "^0.477.0",
     "motion": "^12.4.7",
-    "next": "15.1.7",
+    "next": "15.5.3",
     "next-auth": "^4.24.11",
     "next-themes": "^0.4.4",
     "nodemailer": "^6.10.0",
@@ -31,7 +31,8 @@
     "react-infinite-logo-slider": "^1.1.4",
     "react-intersection-observer": "^9.15.1",
     "tailwind-merge": "^3.0.2",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "cheerio": "^1.0.0-rc.12"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
@@ -39,10 +40,13 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "eslint": "^9",
-    "eslint-config-next": "15.1.7",
+    "eslint": "^9.35.0",
+    "eslint-config-next": "15.5.3",
     "postcss": "^8",
     "tailwindcss": "^4.1.4",
     "typescript": "^5"
+  },
+  "overrides": {
+    "undici": "^5.28.4"
   }
 }
